# beatscope

./: Cargo.toml  LICENSE  README.md  install.sh
src/: app.rs  art.rs  audio.rs  cache.rs  config.rs  dsp.rs  lyrics.rs  lyrics_ui.rs  main.rs  player.rs  romaji.rs  theme.rs  ui.rs  update.rs  upscale.rs  visualizer.rs
