[package]
name = "beatscope"
version = "1.0.0"
edition = "2024"
description = "A terminal music visualizer with album art, synced lyrics, and a configurable cava-style spectrum"
license = "MIT"
repository = "https://github.com/neutro74/beatscope"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
image = "0.25.10"
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"
mpris = "2.1.0"
ratatui = "0.30.2"
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm", "image-defaults"] }
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
unicode-width = "0.2.2"
ureq = "3.3.0"
